<?php
/**
 * 模板类
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/4/27
 * Time: 22:37
 */
interface DisplayElement {
    public function display();
}